--- a/tmuxcolors-dark.conf
+++ b/tmuxcolors-dark.conf
@@ -11,8 +11,10 @@ set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg yellow #orange
+#set-window-option -g window-status-current-fg brightred #orange
+#set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
